--- a/templates/syncrepo.erb
+++ b/templates/syncrepo.erb
@@ -13,7 +13,7 @@ sed '/exclude/c\exclude=*.i?86' /etc/yum.conf > /tmp/yum.conf
 case $1 in
 
 'base')
-  rsync -avn --progress rsync://mirrors.kernel.org/centos/7/os/x86_64/ \
+  rsync -av --progress rsync://mirrors.kernel.org/centos/7/os/x86_64/ \
   /var/www/repos/centos/7/os/x86_64/
   ;;
 
