--- a/templates/syncrepo.erb
+++ b/templates/syncrepo.erb
@@ -58,7 +58,7 @@ case $1 in
   ;;
 
 *)
-  echo "Usage: $0 [base|updates|puppetlabs-products|puppetlabs-deps|epel|misc]"
+  echo "Usage: ${0##*/} [base|updates|puppetlabs-products|puppetlabs-deps|epel|misc]"
   ;;
 
 esac
